[project]
name = "llm-project-research-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "modal>=1.1.3",
]

[dependency-groups]
app = [
    "fastapi>=0.116.1",
    "lancedb>=0.24.3",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.31",
    "tantivy>=0.24.0",
]
dev = []
